[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Cool_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Cool_big_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/difficulty_buttongroup.tres" type="ButtonGroup" id=4]
[ext_resource path="res://Fonts/Cool_small_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/build_buttongroup.tres" type="ButtonGroup" id=6]
[ext_resource path="res://UI/trap_buttongroup.tres" type="ButtonGroup" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.4, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.054902, 0.054902, 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMode" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="VBoxContainer" parent="GameMode"]
anchor_left = 0.95
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.05
margin_left = -127.0
margin_bottom = 70.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameMode/Resource"]
margin_right = 127.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.847059, 0.54902, 0.101961, 1 )
text = "Bones"
align = 2

[node name="Amount" type="Label" parent="GameMode/Resource"]
margin_top = 37.0
margin_right = 127.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.847059, 0.54902, 0.101961, 1 )
text = "10"
align = 2

[node name="Health" type="VBoxContainer" parent="GameMode"]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -130.5
margin_right = 130.5
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameMode/Health"]
margin_right = 261.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.4, 0.4, 0, 1 )
text = "Health"
align = 1

[node name="HealthBar" type="ProgressBar" parent="GameMode/Health"]
margin_top = 37.0
margin_right = 261.0
margin_bottom = 70.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.898039, 0.898039, 1 )
value = 20.0

[node name="Buildings" type="VBoxContainer" parent="GameMode"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -126.0
margin_right = 388.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameMode/Buildings"]
margin_right = 388.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Buildings"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameMode/Buildings"]
margin_top = 37.0
margin_right = 388.0
margin_bottom = 126.0
custom_constants/separation = 48
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameMode/Buildings/HBoxContainer"]
margin_right = 62.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="GameMode/Buildings/HBoxContainer/VBoxContainer"]
margin_right = 62.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Slime
Tower"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower1Button" type="Button" parent="GameMode/Buildings/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 62.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = ExtResource( 6 )

[node name="VBoxContainer2" type="VBoxContainer" parent="GameMode/Buildings/HBoxContainer"]
margin_left = 110.0
margin_right = 177.0
margin_bottom = 89.0
alignment = 1

[node name="Label" type="Label" parent="GameMode/Buildings/HBoxContainer/VBoxContainer2"]
margin_right = 67.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Archer
Tower"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower2Button" type="Button" parent="GameMode/Buildings/HBoxContainer/VBoxContainer2"]
margin_top = 41.0
margin_right = 67.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 48, 48 )
size_flags_stretch_ratio = 0.0
toggle_mode = true
group = ExtResource( 6 )

[node name="VBoxContainer3" type="VBoxContainer" parent="GameMode/Buildings/HBoxContainer"]
margin_left = 225.0
margin_right = 287.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="GameMode/Buildings/HBoxContainer/VBoxContainer3"]
margin_right = 62.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Fire 
Tower"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower3Button" type="Button" parent="GameMode/Buildings/HBoxContainer/VBoxContainer3"]
margin_top = 41.0
margin_right = 62.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = ExtResource( 6 )

[node name="VBoxContainer4" type="VBoxContainer" parent="GameMode/Buildings/HBoxContainer"]
margin_left = 335.0
margin_right = 388.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="GameMode/Buildings/HBoxContainer/VBoxContainer4"]
margin_right = 53.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Grave
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower3Button" type="Button" parent="GameMode/Buildings/HBoxContainer/VBoxContainer4"]
margin_top = 41.0
margin_right = 53.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = ExtResource( 6 )

[node name="Traps" type="VBoxContainer" parent="GameMode"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -370.0
margin_top = -126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameMode/Traps"]
margin_right = 370.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Traps"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameMode/Traps"]
margin_top = 37.0
margin_right = 370.0
margin_bottom = 126.0
custom_constants/separation = 48
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameMode/Traps/HBoxContainer"]
margin_left = 7.0
margin_right = 63.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="GameMode/Traps/HBoxContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Spikes
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trap1Button" type="Button" parent="GameMode/Traps/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 56.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="GameMode/Traps/HBoxContainer"]
margin_left = 111.0
margin_right = 164.0
margin_bottom = 89.0
alignment = 1

[node name="Label" type="Label" parent="GameMode/Traps/HBoxContainer/VBoxContainer2"]
margin_right = 53.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Bear 
Trap"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trap2Button" type="Button" parent="GameMode/Traps/HBoxContainer/VBoxContainer2"]
margin_top = 41.0
margin_right = 53.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 48, 48 )
size_flags_stretch_ratio = 0.0
toggle_mode = true
group = ExtResource( 7 )

[node name="VBoxContainer3" type="VBoxContainer" parent="GameMode/Traps/HBoxContainer"]
margin_left = 212.0
margin_right = 261.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="GameMode/Traps/HBoxContainer/VBoxContainer3"]
margin_right = 49.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Bomb
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trap3Button" type="Button" parent="GameMode/Traps/HBoxContainer/VBoxContainer3"]
margin_top = 41.0
margin_right = 49.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = ExtResource( 7 )

[node name="VBoxContainer4" type="VBoxContainer" parent="GameMode/Traps/HBoxContainer"]
margin_left = 309.0
margin_right = 363.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="GameMode/Traps/HBoxContainer/VBoxContainer4"]
margin_right = 54.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
text = "Ghost
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trap4Button" type="Button" parent="GameMode/Traps/HBoxContainer/VBoxContainer4"]
margin_top = 41.0
margin_right = 54.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = ExtResource( 7 )

[node name="RoundDisplay" type="Timer" parent="GameMode"]
wait_time = 2.0
one_shot = true

[node name="RoundLabel" type="Label" parent="GameMode"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -32.5
margin_right = 140.5
margin_bottom = 32.5
custom_fonts/font = ExtResource( 3 )
text = "Round 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -32.5
margin_right = 139.5
margin_bottom = 32.5
custom_fonts/font = ExtResource( 3 )
text = "Victory"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -32.5
margin_right = 139.5
margin_bottom = 32.5
custom_fonts/font = ExtResource( 3 )
text = "You Lose"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartingMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="StartingMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -10.0
margin_right = 61.5
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartingMenu/StartGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulties" type="VBoxContainer" parent="StartingMenu"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -91.5
margin_top = -30.5
margin_right = 91.5
margin_bottom = 30.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartingMenu/Difficulties"]
margin_right = 183.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
text = "Difficulty"

[node name="Label2" type="Label" parent="StartingMenu/Difficulties"]
margin_top = 37.0
margin_right = 183.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="StartingMenu/Difficulties"]
margin_top = 74.0
margin_right = 183.0
margin_bottom = 98.0
alignment = 1

[node name="Label2" type="Label" parent="StartingMenu/Difficulties/HBoxContainer"]
margin_left = 5.0
margin_top = 3.0
margin_right = 50.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
text = "Easy"

[node name="EasyBox" type="CheckBox" parent="StartingMenu/Difficulties/HBoxContainer"]
margin_left = 54.0
margin_right = 78.0
margin_bottom = 24.0
group = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalBox" type="CheckBox" parent="StartingMenu/Difficulties/HBoxContainer"]
margin_left = 82.0
margin_right = 106.0
margin_bottom = 24.0
pressed = true
group = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardBox" type="CheckBox" parent="StartingMenu/Difficulties/HBoxContainer"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 24.0
group = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartingMenu/Difficulties/HBoxContainer"]
margin_left = 138.0
margin_top = 3.0
margin_right = 178.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
text = "Hard"

[node name="Label3" type="Label" parent="StartingMenu/Difficulties"]
margin_top = 102.0
margin_right = 183.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 5 )
text = "Normal"
align = 1

[node name="Label" type="Label" parent="StartingMenu"]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = -327.5
margin_right = 327.5
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "UNNAMED GAME"
[connection signal="pressed" from="GameMode/Buildings/HBoxContainer/VBoxContainer/Tower1Button" to="." method="_on_BuildmodeButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GameMode/Buildings/HBoxContainer/VBoxContainer2/Tower2Button" to="." method="_on_BuildmodeButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GameMode/Buildings/HBoxContainer/VBoxContainer3/Tower3Button" to="." method="_on_BuildmodeButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GameMode/Buildings/HBoxContainer/VBoxContainer4/Tower3Button" to="." method="_on_BuildmodeButton_pressed" binds= [ 3 ]]
[connection signal="pressed" from="GameMode/Traps/HBoxContainer/VBoxContainer/Trap1Button" to="." method="_on_TrapModeButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GameMode/Traps/HBoxContainer/VBoxContainer2/Trap2Button" to="." method="_on_TrapModeButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GameMode/Traps/HBoxContainer/VBoxContainer3/Trap3Button" to="." method="_on_TrapModeButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GameMode/Traps/HBoxContainer/VBoxContainer4/Trap4Button" to="." method="_on_TrapModeButton_pressed" binds= [ 3 ]]
[connection signal="timeout" from="GameMode/RoundDisplay" to="." method="_on_RoundDisplay_timeout"]
[connection signal="pressed" from="StartingMenu/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="StartingMenu/Difficulties/HBoxContainer/EasyBox" to="." method="_on_EasyBox_pressed"]
[connection signal="pressed" from="StartingMenu/Difficulties/HBoxContainer/NormalBox" to="." method="_on_NormalBox_pressed"]
[connection signal="pressed" from="StartingMenu/Difficulties/HBoxContainer/HardBox" to="." method="_on_HardBox_pressed"]
